--- a/plugin.xml
+++ b/plugin.xml
@@ -1,21 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        id="cordova-plugin-vkontakte"
+        version="1.0.0">
+
+  <name>Cordova VK SDK</name>
+
+  <description>Use your VK account to authenticate with the app.</description>
+
+  <author>Artem Artemev</author>
+
+  <license>MIT</license>
+
+  <keywords>VK, Vkontakte, Login, OAuth</keywords>
+
+  <repo>https://github.com/c58/cordova-plugin-vkontakte.git</repo>
+
+  <issue>https://github.com/c58/cordova-plugin-vkontakte/issues</issue>
+
+  <engines>
+    <engine name="cordova" version=">=3.3.0"/>
+  </engines>
+
+  <js-module src="www/vkontakte.js" name="Vkontakte">
+    <clobbers target="window.plugins.vkontakte" />
+  </js-module>
+
+  <!-- ios -->
+  <platform name="ios">
+
+    <config-file target="config.xml" parent="/*">
+      <feature name="Vkontakte">
+        <param name="ios-package" value="Vkontakte"/>
+        <param name="onload" value="true" />
+      </feature>
+      <access origin="https://oauth.vk.com/*" />
+      <access origin="https://api.vk.com/*" />
+    </config-file>
+
+    <header-file src="src/ios/Vkontakte.h"/>
+    <source-file src="src/ios/Vkontakte.m" />
+    <source-file src="src/ios/NSData+Base64.h" />
+    <source-file src="src/ios/NSData+Base64.m" />
+
+    <preference name="VK_APP_ID"/>
+
+    <config-file target="*-Info.plist" parent="CFBundleURLTypes">
+      <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string>vk$VK_APP_ID</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+              <string>vk$VK_APP_ID</string>
+            </array>
+        </dict>
+      </array>
+    </config-file>
+
+    <!-- iOS9 whitelisting -->
+    <config-file target="*-Info.plist" parent="LSApplicationQueriesSchemes">
+      <array>
+        <string>$PACKAGE_NAME</string>
+        <string>$VK_APP_ID</string>
+        <string>vk$VK_APP_ID</string>
+      </array>
+    </config-file>
+
+    <!-- Vkontakte frameworks -->
+    <framework src="src/ios/libs/VKSdk.framework" custom="true"/>
+    <resource-file src="src/ios/libs/VKSdkResources.bundle" />
+
+    <!-- System frameworks -->
+    <framework src="AddressBook.framework" weak="true" />
+    <framework src="CoreMotion.framework" weak="true" />
+    <framework src="CoreText.framework" weak="true" />
+    <framework src="CoreLocation.framework" weak="true" />
+    <framework src="MediaPlayer.framework" weak="true" />
+    <framework src="Security.framework" weak="true" />
+    <framework src="StoreKit.framework" weak="true" />
+    <framework src="SystemConfiguration.framework" weak="true" />
+
+  </platform>
+
+
+  <!-- Android -->
+  <platform name="android">
+    <config-file target="res/xml/config.xml" parent="/*">
+      <feature name="Vkontakte">
+        <param name="android-package" value="com.stuytime.vkontakte.Vkontakte"/>
+        <param name="onload" value="true" />
+      </feature>
+      <access origin="https://oauth.vk.com/*" />
+      <access origin="https://api.vk.com/*" />
+    </config-file>
+
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+      <activity android:name="com.vk.sdk.VKOpenAuthActivity" >
+      </activity>
+      <activity android:name="com.vk.sdk.VKServiceActivity" >
+      </activity>
+    </config-file>
+
+    <config-file target="res/values/strings.xml" parent="/*">
+      <integer name="com_vk_sdk_AppId">$VK_APP_ID</integer>
+    </config-file>
+
+    <framework src="src/android/vksdk_library" custom="true" />
+    <source-file src="src/android/Vkontakte.java" target-dir="src/com/stuytime/vkontakte/" />
+  </platform>
+
+</plugin>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<?xml version="1.0" encoding="UTF-8"?>
 <plugin
     xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="ru.trilan.cordova-social-vk"
+    id="cordova-plugin-vkontakte"
     version="1.0.0">
 
-  <name>SocialVk</name>
-  <description>Cordova plugin for VKontakte sharing</description>
+  <name>VK</name>
+  <description>Cordova plugin for VKontakte SDK</description>
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
-  
+
   <license>Apache 2.0 License</license>
   <author>DrMoriarty</author>
-  <keywords>cordova,phonegap,vkontakte,sharing</keywords>
-  <js-module src="www/social-vk.js" name="SocialVk">
-    <clobbers target="SocialVk" />
+  <keywords>cordova,phonegap,vkontakte,sdk</keywords>
+  <js-module src="www/social-vk.js" name="VK">
+    <clobbers target="VK" />
   </js-module>
   <preference name="VK_APP_ID" />
   <!-- ios -->
