--- a/plugin.xml
+++ b/plugin.xml
@@ -26,7 +26,7 @@
     <clobbers target="window.plugins.vkontakte" />
   </js-module>
 
-  <!-- ios -->
+  <!-- iOS -->
   <platform name="ios">
 
     <config-file target="config.xml" parent="/*">
