--- a/plugin.xml
+++ b/plugin.xml
@@ -26,6 +26,8 @@
     <clobbers target="window.plugins.vkontakte" />
   </js-module>
 
+  <preference name="VK_APP_ID" />
+
   <!-- iOS -->
   <platform name="ios">
 
@@ -88,7 +90,7 @@
 
   <!-- Android -->
   <platform name="android">
-    <config-file target="res/xml/config.xml" parent="/*">
+    <config-file target="config.xml" parent="/*">
       <feature name="Vkontakte">
         <param name="android-package" value="com.studytime.vkontakte.Vkontakte"/>
         <param name="onload" value="true" />
@@ -98,10 +100,8 @@
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
-      <activity android:name="com.vk.sdk.VKOpenAuthActivity" >
-      </activity>
-      <activity android:name="com.vk.sdk.VKServiceActivity" >
-      </activity>
+      <activity android:name="com.vk.sdk.VKOpenAuthActivity"></activity>
+      <activity android:name="com.vk.sdk.VKServiceActivity"></activity>
     </config-file>
 
     <config-file target="res/values/strings.xml" parent="/*">
